--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-images-viewer": "^1.7.1",
+    "sharp": "^0.33.5",
     "swiper": "^11.1.4",
     "yup": "^1.4.0"
   },
